--- a/bonjour.yml
+++ b/bonjour.yml
@@ -3,4 +3,4 @@
   tasks:
     - name: message de bienvenue
       debug:
-        msg: "bonjour-bonjour  {{ inventory_hostname }}!"
+        msg: "bonjour-bonjour {{ inventory_hostname }} ! $USER"
