--- a/bonjour.yml
+++ b/bonjour.yml
@@ -7,6 +7,8 @@
     - debug: var=ansible_all_ipv4_addresses
     - name: qui suis-je ?
       shell: echo "$USER" 
+    - name: Upgrade all apt packages
+          apt: upgrade=dist force_apt_get=yes
     - name: Install MySQL
       apt:
         name: "{{ item }}"
@@ -14,8 +16,7 @@
         #- python-mysqldb
         - mysql-server
     - name: erreur volontaire
-      shell: mysql -uroot -e "select 1+1;"
-
+        shell: mysql -uroot -e "select 1+1;"
  #   - name: je te donne des informations importantes 
  #       debug: var=ansible_all_ipv4_addresses
  #   - name: encore plus d'infos 
