--- a/bonjour.yml
+++ b/bonjour.yml
@@ -15,8 +15,8 @@
         with_items:
           #- python-mysqldb
           - mysql-server
-    - name: erreur volontaire
-      shell: mysql -uroot -e "select 1+1;" 
+    # - name: erreur volontaire
+    #   shell: mysql -uroot -e "select 1+1;" 
  #   - name: je te donne des informations importantes 
  #       debug: var=ansible_all_ipv4_addresses
  #   - name: encore plus d'infos 
