--- a/bonjour.yml
+++ b/bonjour.yml
@@ -9,6 +9,7 @@
       shell: echo "$USER" 
     - name: Upgrade all apt packages
       apt: upgrade=dist force_apt_get=yes
+        force_apt_get: True
     - name: Install MySQL
       apt:
         name: "{{ item }}"
