--- a/bonjour.yml
+++ b/bonjour.yml
@@ -8,7 +8,8 @@
     - name: qui suis-je ?
       shell: echo "$USER" 
     - name: Upgrade all apt packages
-      apt: upgrade=dist force_apt_get=yes
+      apt: 
+        upgrade: dist
         force_apt_get: True
     - name: Install MySQL
       apt:
